<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".Activity.ProfileDetails">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#3cb6d3 ">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="55dp"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/security"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="365dp"
        android:layout_height="66dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:background="#F6EEEE"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/current_password"
            android:inputType="textPersonName"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="365dp"
        android:layout_height="66dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:background="#F6EEEE"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtpwd"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPersonName"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="365dp"
        android:layout_height="66dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:background="#F6EEEE"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtCNpwd"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/confirm_new_password"
            android:inputType="textPersonName"
            android:padding="10dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="365dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:text="@string/update_password" />

    <Button
        android:id="@+id/btnDiscard"
        android:layout_width="365dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:text="@string/discard_changes" />

</LinearLayout>